<?xml version="1.0" encoding="ISO-8859-1"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>it.geosolutions</groupId>
    <artifactId>geostore</artifactId>
    <version>2.2-SNAPSHOT</version>

    <packaging>pom</packaging>

    <name>Master GeoStore POM</name>
    <description>
        GeoStore is an open source Java enterprise application for storing, searching and retrieving data on the fly.
    </description>

    <url>https://github.com/geosolutions-it/geostore</url>
    <inceptionYear>2011</inceptionYear>

    <organization>
        <name>GeoSolutions</name>
        <url>http://www.geo-solutions.it</url>
    </organization>

    <developers>
        <developer>
            <id>etj</id>
            <name>Emanuele Tajariol</name>
            <email>etj AT geosolutions.it</email>
            <organization>GeoSolutions</organization>
            <organizationUrl>http://www.geo-solutions.it</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>tobaro</id>
            <name>Tobia Di Pisa</name>
            <email>tobia.dipisa AT geosolutions.it</email>
            <organization>GeoSolutions</organization>
            <organizationUrl>http://www.geo-solutions.it</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>GPL-3-0</name>
            <url>http://opensource.org/licenses/GPL-3.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/geosolutions-it/geostore/issues</url>
    </issueManagement>

    <scm>
        <url>https://github.com/geosolutions-it/geostore</url>
        <connection>scm:git:git@github.com:geosolutions-it/geostore.git</connection>
        <tag>HEAD</tag>
    </scm>

    <ciManagement>
        <system>jenkins</system>
        <url>http://build.geo-solutions.it/jenkins/view/GeoStore/</url>
    </ciManagement>

    <distributionManagement>
        <!-- use the following if you're not using a snapshot version. -->
        <repository>
            <uniqueVersion>false</uniqueVersion>
            <id>geosolutions</id>
            <url>ftp://maven.geo-solutions.it/</url>
        </repository>
        <!-- use the following if you ARE using a snapshot version. -->
        <snapshotRepository>
            <uniqueVersion>false</uniqueVersion>
            <id>geosolutions</id>
            <url>ftp://maven.geo-solutions.it/</url>
        </snapshotRepository>
        <site>
            <id>demo.geosolutions</id>
            <url>scp://demo.geo-solutions.it/var/www/share/javadoc/geostore/${project.version}</url>
        </site>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <encoding>utf8</encoding>
                    <source>8</source>
                    <target>8</target>
                    <debug>true</debug>
                    <encoding>UTF-8</encoding>
                    <!--
                        On the win32 build box the compiler oom's due to the compiler accumulating
                        too many classes in the permanent generation, similar to GEOT-2462
                    -->
                    <fork>true</fork>
                    <meminitial>128M</meminitial>
                    <maxmem>1512M</maxmem>
                </configuration>
            </plugin>

            <!-- ======================================================= -->
            <!-- Source packaging. -->

            <plugin>
                <inherited>true</inherited>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- ======================================================= -->
            <!-- versioning -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.2</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>4.1.0</version>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <format>xml</format>
                    <maxmem>256m</maxmem>
                    <!-- aggregated reports for multi-module projects -->
                    <aggregate>true</aggregate>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>9.0.9</version>
                <configuration>
                    <skip>true</skip>
                    <!-- <nvdApiKey>******-****-****-****-*********</nvdApiKey> -->
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>

        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ftp</artifactId>
                <version>2.10</version>
            </extension>
        </extensions>

    </build>

    <reporting>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <links>
                        <link>http://commons.apache.org/lang/api</link>
                        <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
                        <link>http://www.jdom.org/docs/apidocs</link>
                    </links>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <modules>
        <module>src</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>
